# nt5

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ubuntu-dependencies.txt
src/arrays/include/nt5emul/arrays/: rsb_array_char.h  rsb_array_color.h  rsb_array_gen.h  rsb_array_int.h  rsb_array_string.h
src/arrays/src/: char.c  color.c  int.c  string.c
src/boot/include/nt5emul/: boot.h
src/boot/src/: main.c  try_parse_explorer.c
src/easings_test/src/: main.c
src/global/include/nt5emul/: nt_config.h  version.h
src/language/include/nt5emul/: language_pack.h
src/language/src/: find.c  get_string.c  language_strings.c
src/launcher/: main.c
src/modules/codegen/: generate_module.js  package-lock.json
src/modules/explorer/include/nt5emul/modules/explorer/: command.h  explorer_command.h  intro.h  (+6 more)
src/modules/explorer/src/: draw.c  intro_draw.c  load_text.c  main.c  module.c  shell.c  state.c  update.c  wnd_on_close.c
src/modules/explorer/src/app/: create_app.c  draw.c  on_close.c  update.c
src/modules/explorer/src/intro_app/: create.c  on_close.c
src/modules/explorer/src/shell/: shell.c
src/modules/logo/src/: draw.c  main.c  module.c  reset.c  state.c  update.c
src/modules/logonui/src/: logonui_command.c  module.c  state.c
src/modules/notepad/src/: module.c  notepad_command.c  state.c
src/modules/notify/src/: module.c  state.c  topnotify_command.c
src/modules/oobe/src/: auto_progress_bar.c  center_texture.c  cropped_texture.c  draw_background.c  module.c  msoobe_command.c  preload.c  setup_command.c  setup_preload.c  sized_texture.c  state.c  steps.c  stretched_texture.c
src/nt_install/include/nt5emul/: boot_install.h  boot_install_background.h  boot_install_settings.h  boot_install_steps.h  nt_install.h
src/nt_install/include/nt5emul/bi/: cabfile.h  cabinet.h  frame.h  input.h  menu.h  ntcore.h  progress_bar.h  rectangle.h  text.h  timer.h  xp_detection.h
src/nt_install/src/: background.c  background_processing_step1.c  background_renderer.c  begin_step10.c  begin_step2.c  begin_step3.c  begin_step4.c  begin_step5.c  begin_step6.c  begin_step7.c  begin_step8.c  begin_step9.c  cabinet_extract.c  cabinet_files.c  cabinet_listing.c  copying.c  format_choose.c  formatting.c  global_shortcuts.c  help_bootscreen.c  interface_frame.c  interface_input.c  interface_menu.c  interface_progress_bar.c  interface_rectangle.c  interface_text.c  license.c  main.c  nt_cores.c  nt_init.c  partition_magic.c  restart.c  state.c  strings.c  text_renderer.c  throw_error.c  timer.c  welcome.c  xp_detection.c  xp_disk_path.c
src/nt_install/src/autogen/: lgen.js  listing.txt
src/nt_tools/include/nt5emul/: copy_string.h  directory_exist.h  directory_exists.h  file_exists.h  middle.h  ntcore.h  read_text.h  reverse_int.h  sort.h  timer.h
src/nt_tools/src/: config.c  copy_string.c  directory_exist.c  directory_exists.c  file_exists.c  middle.c  nt_cores.c  read_text.c  reverse_int.c  sort.c  timer.c
src/ntldr_tui/include/nt5emul/tui/: environment.h  file_selector.h  frame.h  input.h  menu.h  progress_bar.h  rectangle.h  text.h
src/ntldr_tui/src/: fileselector_click.c  fileselector_load.c  fileselector_setlisting.c  fileselector_unload.c  fileselector_update.c  frame.c  get_environment.c  input.c  load_environment.c  menu.c  progress_bar.c  rectangle.c  state.c  text.c
src/panic/include/nt5emul/panic/: context.h  setup.h
src/panic/src/: init.c
src/pe_viewer/include/nt5emul/pv/: file_check.h  peinfo.h  select_file.h  state.h
src/pe_viewer/src/: file_check.c  main.c  screen_peinfo.c  select_file.c  state.c
src/renderer/include/nt5emul/: renderer.h  renderer_animation.h  renderer_ease.h  renderer_event.h  renderer_keyframe.h  renderer_lua_bindings.h  renderer_params.h
src/renderer/include/nt5emul/dwm/: basic_theme.h  bool.h  builder.h  button.h  context.h  context_menu.h  font.h  lua_bindings.h  sound.h  theme.h  video.h  window.h
src/renderer/src/: close.c  create.c  draw.c  dwm_button.c  dwm_context_create.c  dwm_context_destroy.c  dwm_context_push_window.c  dwm_draw.c  dwm_get_process.c  dwm_get_processes.c  dwm_sound.c  dwm_theme_parse.c  dwm_window_close.c  dwm_window_create.c  dwm_window_draw.c  dwm_window_update.c  get_state.c  global_dwm.c  ico.c  join.c  queue.c  texture_draw.c  thread.c  update.c  variables.c  window_array.c
src/renderer/src/dwm/: dwm_button.c  dwm_context_create.c  dwm_context_destroy.c  dwm_context_menu.c  dwm_context_push_window.c  dwm_get_processes.c  dwm_video.c  dwm_window_close.c  dwm_window_create.c  dwm_window_update.c
src/renderer/src/dwm/builder/: create_button.c  create_context_menu.c  create_image.c  create_ui.c  translate_key.c
src/renderer/src/dwm/builder/deserializer/: dwm_builder_parse.c
src/renderer/src/dwm/builder/serializer/: create_button.c  create_context_menu.c  create_image.c  create_text.c  create_ui.c
src/renderer/src/dwm/context/: dwm_context_create.c  dwm_context_destroy.c  dwm_context_push_window.c  size.c
src/renderer/src/dwm/etc/: dwm_draw.c  window_array.c
src/renderer/src/dwm/input/: dwm_mouse.c
src/renderer/src/dwm/lua/: dwm.c
src/renderer/src/dwm/process/: dwm_get_process.c  dwm_get_processes.c
src/renderer/src/dwm/ui/: dwm_button.c  dwm_context_menu.c  font.c
src/renderer/src/dwm/window/: dwm_window_close.c  dwm_window_create.c  dwm_window_draw.c  dwm_window_update.c
src/renderer/src/easing/: animation.c  array.c  create_double.c  create_float.c  determine.c  double.c  float.c  set.c
src/renderer/src/effects/: blur.c
src/renderer/src/image/: image.c  screen.c  texture_draw.c
src/renderer/src/input/: mouse.c
src/renderer/src/lua/: push.c  raylib.c  run.c  tools.c
src/renderer/src/raylib/: begin_texture_mode.c  end_texture_mode.c  stack_find.c
src/renderer/src/window/: close.c  create.c  dpi.c  draw.c  event.c  event_array.c  fps.c  get_state.c  queue.c  queue_array.c  screen.c  thread.c  update.c  variables.c  watermark.c
src/renderer/src/x11/: load_stream.c  update.c
src/resources/: basic.theme  license.txt
src/resources/blur/: blur.fs  blur.vs
(+17 files in other folders)
